--- a/src/scss/components/actual.scss
+++ b/src/scss/components/actual.scss
@@ -1,10 +1,9 @@
-.wrapper{
+.wrapperActual{
     background-color: white;
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-    min-height: 90vh;
-    width: 20%;
-    align-items: center;
-    padding: 25px 5px;
     margin-top: 20px;
+    width: 78%;
+    margin-left: auto;
     border-radius: 25px;
+    padding: 20px;
 }
