Add categories and search

--- a/src/scss/all.scss
+++ b/src/scss/all.scss
@@ -1,3 +1,4 @@
 @import './components/sidenav.scss';
 @import './components/actual.scss';
 @import './components/cardActual.scss';
+@import './components/categories.scss';
