--- a/src/scss/all.scss
+++ b/src/scss/all.scss
@@ -2,3 +2,4 @@
 @import './components/actual.scss';
 @import './components/cardActual.scss';
 @import './components/categories.scss';
+@import './components/productItem.scss';
