--- a/src/scss/all.scss
+++ b/src/scss/all.scss
@@ -3,3 +3,4 @@
 @import './components/cardActual.scss';
 @import './components/categories.scss';
 @import './components/productItem.scss';
+@import './components//basket.scss';
