--- a/src/scss/components/sidenav.scss
+++ b/src/scss/components/sidenav.scss
@@ -1,4 +1,5 @@
 .wrapper{
+    display: flex;
     background-color: white;
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
     min-height: 90vh;
@@ -7,4 +8,10 @@
     padding: 25px 5px;
     margin-top: 20px;
     border-radius: 25px;
+    
+    &--link{
+        color: black;
+        text-decoration: none;
+        font-size: 20px;
+    }
 }
