Add product page, icons

--- a/src/scss/all.scss
+++ b/src/scss/all.scss
@@ -2,5 +2,6 @@
 @import './components/actual.scss';
 @import './components/cardActual.scss';
 @import './components/categories.scss';
-@import './components/productItem.scss';
+@import './components/product.scss';
 @import './components//basket.scss';
+@import './components/button.scss';
