--- a/src/scss/components/basket.scss
+++ b/src/scss/components/basket.scss
@@ -29,7 +29,27 @@
             padding: 10px 0;
         }
 
+        &--minus{
+            svg{
+                path:first-of-type {
+                    display: none;
+                }
+            }
+        }
 
+        &--remove{
+            .button{
+                background-color: darken($color: gray, $amount: 10);
+            }
+
+            svg{
+                transform: rotate(45deg);
+
+                path{
+                    fill: darken($color: gray, $amount: 15)
+                }
+            }
+        }
     }
 
     &--clear{
@@ -46,7 +66,7 @@
         }
 
         span, svg, path {
-            transition: all 0.15s ease-in-out;
+            transition: all $duration ease-in-out;
         }
 
         &:hover{
@@ -89,6 +109,7 @@
 
             span{
                 font-size: 20px;
+                font-weight: 600;
             }
         }
 
@@ -96,6 +117,35 @@
             display: flex;
             justify-content: space-between;
             margin-top: 40px;
+
+            .back{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                border-color: darken($color: #f6f6f6, $amount: 10);
+
+                span{
+                    color: darken($color: #f6f6f6, $amount: 15)
+                }
+
+                &:hover{
+                    background-color: darken($color: #f6f6f6, $amount: 90);
+                    border-color: darken($color: #f6f6f6, $amount: 90)
+
+                    span{
+                        color: #f6f6f6;
+                    }
+                }
+
+                svg{
+                    margin-right: 12px;
+                    path{
+                        fill: transparent;
+                        stroke-width: 2;
+                    }
+                }
+            }
         }
     }
 }
