--- a/src/scss/components/cardActual.scss
+++ b/src/scss/components/cardActual.scss
@@ -1,3 +1,5 @@
+@import '../variables.scss';
+
 .image{
   height: 200px;
   width: 200px;
@@ -9,8 +11,10 @@
   width: 200px;
   cursor: pointer;
   padding: 20px;
+  transition: all $duration ease-in-out;
+
+  &:hover{
+    opacity: 0.3;
+  }
 }
 
-.cardBlock:hover {
-  opacity: 0.3;
-}
