--- a/src/scss/components/sidenav.scss
+++ b/src/scss/components/sidenav.scss
@@ -1,3 +1,5 @@
+@import '../variables.scss';
+
 .wrapper{
     display: flex;
     background-color: white;
@@ -13,5 +15,17 @@
         color: black;
         text-decoration: none;
         font-size: 20px;
+        display: flex;
+        transition: all $duration ease-in-out;
+        
+        &:hover{
+            color: $yellow;
+        }
+
+        svg{
+            position: relative;
+            top: 5px;
+            margin-right: 7px;
+        }
     }
 }
