--- a/src/scss/components/categories.scss
+++ b/src/scss/components/categories.scss
@@ -7,9 +7,10 @@
 }
 
 .categories{
-    flex: 1;
+    display: flex;
+    justify-content: center;
     width: 100%;
-    margin: 15px 0px;
+    margin: 15px 0 0 0;
 
     ul {
         display: flex;
