--- a/src/scss/all.scss
+++ b/src/scss/all.scss
@@ -5,3 +5,4 @@
 @import './components/product.scss';
 @import './components//basket.scss';
 @import './components/button.scss';
+@import './components/filters.scss';
