--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -23,6 +23,10 @@
     }
 }
 
+.productContainer{
+    display: block;
+}
+
 .description{
     display: flex;
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
